--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,8 @@
+[package]
+name = "Rine"
+version = "0.1.0"
+edition = "2021"
+
 [workspace]
 members = [
     "core",
@@ -6,7 +11,3 @@ members = [
     "components/terminal",
     "components/git_features"
 ]
-
-[workspace.package]
-version = "0.1.0"
-edition = "2021"
